# amplifier-distro

./: .gitignore  README.md  install.sh  pyproject.toml
.amplifier/recipes/: e2e-browser-tests.yaml  github-issue-triage.yaml
.github/workflows/: ci.yml  deps-update.yml
amplifierd-plugins/amplifierd-plugin-auth/: pyproject.toml
amplifierd-plugins/amplifierd-plugin-auth/src/auth_plugin/: __init__.py  pam.py  routes.py
amplifierd-plugins/amplifierd-plugin-auth/src/auth_plugin/static/: login.html
amplifierd-plugins/amplifierd-plugin-auth/tests/: test_routes.py
amplifierd-plugins/amplifierd-plugin-distro/: pyproject.toml
amplifierd-plugins/amplifierd-plugin-distro/src/distro_plugin/: __init__.py  __main__.py  config.py  distro_settings.py  features.py  overlay.py  providers.py  reload.py  routes.py
amplifierd-plugins/amplifierd-plugin-distro/src/distro_plugin/static/: auth-widget.js  dashboard.html  loading.html  settings.html  styles.css  wizard.html
amplifierd-plugins/amplifierd-plugin-distro/tests/: conftest.py  test_config.py  test_distro_settings.py  test_features.py  test_init.py  test_overlay.py  test_plugin_load.py  test_prewarm_integration.py  test_providers.py  test_reload.py  test_routes_features.py  test_routes_settings.py  test_routes_status.py  test_routes_wizard.py  test_static_pages.py
amplifierd-plugins/amplifierd-plugin-slack/: pyproject.toml
amplifierd-plugins/amplifierd-plugin-slack/src/slack_plugin/: __init__.py  _fileutil.py  backend_adapter.py  commands.py  config.py  discovery.py  events.py  formatter.py  models.py  sessions.py  setup.py  simulator.py
amplifierd-plugins/amplifierd-plugin-slack/src/slack_plugin/static/: simulator.html  slack-setup.html
amplifierd-plugins/amplifierd-plugin-voice/: pyproject.toml
amplifierd-plugins/amplifierd-plugin-voice/src/voice_plugin/: __init__.py  backend_adapter.py  connection.py  realtime.py
amplifierd-plugins/amplifierd-plugin-voice/src/voice_plugin/static/: connection-health.test.mjs  index.html
amplifierd-plugins/amplifierd-plugin-voice/src/voice_plugin/transcript/: repository.py
bundle/: README.md  bundle.md
bundle/agents/: friction-detector.md  health-checker.md  session-handoff.md
bundle/behaviors/: start.yaml
bundle/context/: start-awareness.md  start-conventions.md
bundle/docs/: ARCHITECTURE.md
bundle/modules/hooks-handoff/: pyproject.toml
bundle/modules/hooks-handoff/amplifier_module_hooks_handoff/: __init__.py
bundle/modules/hooks-preflight/: pyproject.toml
bundle/modules/hooks-preflight/amplifier_module_hooks_preflight/: __init__.py
bundle/recipes/: friction-report.yaml  morning-brief.yaml
distro-server/: Dockerfile  README.md  pyproject.toml
distro-server/scripts/: amplifier-distro.service  docker-entrypoint.sh  install-service.sh
distro-server/src/amplifier_distro/: cli.py  conventions.py  distro_settings.py  doctor.py  features.py  overlay.py  service.py  tailscale.py  transcript_persistence.py
distro-server/src/amplifier_distro/server/: app.py  auth.py  auth_routes.py  cli.py  origins.py  preflight.py  protocol_adapters.py  session_backend.py  session_dir.py  spawn_registration.py  startup.py  stub.py  tls.py  watchdog.py
distro-server/src/amplifier_distro/server/apps/chat/: __init__.py  connection.py  pin_storage.py  session_history.py
distro-server/src/amplifier_distro/server/apps/chat/static/: index.html
distro-server/src/amplifier_distro/server/apps/install_wizard/static/: wizard.html
distro-server/src/amplifier_distro/server/apps/settings/: __init__.py
distro-server/src/amplifier_distro/server/apps/settings/static/: settings.html
distro-server/src/amplifier_distro/server/apps/slack/: __init__.py  client.py  discovery.py  events.py  formatter.py  sessions.py  setup.py  socket_mode.py
distro-server/src/amplifier_distro/server/apps/slack/static/: slack-setup.html
distro-server/src/amplifier_distro/server/apps/voice/: __init__.py  connection.py  realtime.py
distro-server/src/amplifier_distro/server/apps/voice/protocols/: event_streaming.py  voice_approval.py  voice_display.py
distro-server/src/amplifier_distro/server/apps/voice/static/: connection-health.mjs  index.html
distro-server/src/amplifier_distro/server/apps/voice/transcript/: models.py  repository.py
distro-server/src/amplifier_distro/server/static/: amplifier-header.js  amplifier-theme.css  index.html  loading.html  login.html  styles.css  theme-init.js
distro-server/tests/: test_auth.py  test_chat_cancellation.py  test_chat_connection.py  test_chat_session_history.py  test_cli.py  test_cli_bare_serve.py  test_cli_tls_flags.py  test_doctor.py  test_login_html.py  test_origins.py  test_pin_storage.py  test_protocol_adapters.py  test_secure_remote_integration.py  test_server.py  test_service.py  test_session_backend.py  test_settings_tls_auth.py  test_slack_bridge.py  test_spawn_registration.py  test_tailscale.py  test_tls.py  test_tls_auto_remote.py  test_tls_startup.py  test_transcript_persistence.py  test_voice_health_check.py  test_voice_realtime.py  test_voice_routes.py  test_voice_static_index.py  test_voice_static_secure_context.py  test_watchdog.py
distro-server/tests/apps/voice/: test_realtime.py  test_tools_route.py  test_voice_connection.py  test_voice_protocols.py  test_voice_realtime.py  test_voice_routes.py  test_voice_settings.py  test_voice_static_index.py  test_voice_transcript.py  test_voice_translator.py
distro-service/: pyproject.toml
distro-service/src/amplifier_distro/: backup.py  cli.py  distro_settings.py  doctor.py  service.py
distro-service/src/amplifier_distro/server/: __init__.py  daemon.py
distro-service/tests/: test_cli.py  test_daemon.py  test_doctor.py  test_service.py
docs/: AMPLIFIER_HOME_CONTRACT.md  DELEGATION-COMPARISON.md  HOSTING.md  INDEX.md  voice-architecture.md  voice-realtime-review.md
docs/plans/: 2026-02-26-voice-app-port-design.md  2026-02-27--design.md  2026-02-27--plan.md  2026-02-27-chat-to-voice-design.md  2026-02-27-chat-to-voice.md  2026-02-27-delegation-feedback-design.md  2026-03-01--design.md  (+10 more)
(+1 files in other folders)
