# amplifier-distro/distro-service/pyproject.toml
[project]
name = "amp-distro"
version = "0.1.0"
description = "Amplifier distro — amplifierd + distro plugin"
requires-python = ">=3.12"
dependencies = [
    "amplifierd @ git+https://github.com/microsoft/amplifierd@main",
    "amplifierd-plugin-distro @ git+https://github.com/microsoft/amplifierd@main#subdirectory=amplifierd-plugins/distro",
    "amplifierd-plugin-chat @ git+https://github.com/payneio/amplifierd-plugin-chat@main",
    "amplifierd-plugin-slack @ git+https://github.com/microsoft/amplifierd@main#subdirectory=amplifierd-plugins/slack",
    "amplifierd-plugin-voice @ git+https://github.com/microsoft/amplifier-voice@main",
    "amplifierd-plugin-auth",
    "click>=8.1.0",
]

[project.scripts]
amp-distro = "amplifier_distro.cli:main"

# Local dev overrides: use sibling checkouts instead of git URLs
[tool.uv.sources]
amplifierd = { git = "https://github.com/microsoft/amplifierd", branch = "main" }
amplifierd-plugin-distro = { path = "../amplifierd-plugins/amplifierd-plugin-distro", editable = true }
amplifierd-plugin-slack = { path = "../amplifierd-plugins/amplifierd-plugin-slack", editable = true }
# amplifierd-plugin-voice — now a proper remote dep, no local override needed
amplifierd-plugin-auth = { path = "../amplifierd-plugins/amplifierd-plugin-auth", editable = true }
# amplifierd-plugin-chat = { path = "../../amplifierd-plugin-chat", editable = true }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_distro"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
