# amplifier-distro/distro-service/pyproject.toml
[project]
name = "amp-distro"
version = "0.1.0"
description = "Amplifier distro — amplifierd + distro plugin"
requires-python = ">=3.12"
dependencies = [
    "amplifierd",
    "amplifierd-plugin-distro",
    "amplifier-chat[voice]",
    "amplifierd-plugin-slack",
    "amplifierd-plugin-voice",
    "amplifierd-plugin-auth",
    "click>=8.1.0",
]

[project.scripts]
amp-distro = "amplifier_distro.cli:main"

# Sibling plugins use workspace resolution for local dev.
# External deps need explicit git sources here so distro-service is
# self-contained — the workspace root also declares these, but we can't
# rely on workspace discovery in all install contexts.
[tool.uv.sources]
amplifierd = { git = "https://github.com/microsoft/amplifierd", branch = "main" }
amplifier-chat = { git = "https://github.com/microsoft/amplifier-chat", branch = "main" }
amplifierd-plugin-voice = { git = "https://github.com/microsoft/amplifier-voice", branch = "main" }
amplifierd-plugin-distro = { workspace = true }
amplifierd-plugin-slack = { workspace = true }
amplifierd-plugin-auth = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_distro"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
