[project]
name = "amplifierd-plugin-auth"
version = "0.1.0"
description = "PAM authentication plugin for amplifierd"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "itsdangerous>=2.0",
    "python-pam>=2.0.0; sys_platform == 'linux'",
    "six",  # undeclared transitive dep of python-pam
    "python-multipart>=0.0.9",
]

[project.entry-points."amplifierd.plugins"]
auth = "auth_plugin"

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/auth_plugin"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"