[project]
name = "amplifierd-plugin-slack"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
socket = ["aiohttp>=3.9"]
dev = ["uvicorn[standard]>=0.30"]
test = ["pytest", "pytest-asyncio", "httpx"]

[project.entry-points."amplifierd.plugins"]
slack = "slack_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_plugin"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
