[project]
name = "amplifierd-plugin-voice"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = ["uvicorn[standard]>=0.30"]
test = ["pytest", "pytest-asyncio", "httpx"]

[project.entry-points."amplifierd.plugins"]
voice = "voice_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_plugin"]
