[project]
name = "amplifier-module-hooks-preflight"
version = "0.1.0"
description = "Pre-flight checks hook - validates environment health at session start"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.modules"]
hooks-preflight = "amplifier_module_hooks_preflight:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_preflight"]
